# hg_conway

./: README.md  pyproject.toml
hg_conway/: __init__.py  __main__.py  application.py
hg_conway/structures/: __init__.py  __main__.py  application.py  base.py
