[tool.poetry]
name = "hg_conway"
version = "0.1.0"
description = "conway game of life cli version"
authors = ["Kevin Thomas <hamgom95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."hg_conway.structures"]
base = 'hg_conway.structures.base:base'
